--- a/css/styles.css
+++ b/css/styles.css
@@ -296,10 +296,14 @@ button {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
 }
 
@@ -307,10 +311,15 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: var(--accent-color);
   min-width: 528px;
   min-height: 581px;
-  background-color: var(--accent-color);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms linear;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.6);
 }
 
 .close-modal {
@@ -319,20 +328,13 @@ button {
   justify-content: center;
   align-items: center;
   padding: 0;
-  top: 0;
-  left: 0;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   background-color: inherit;
-}
-
-.icon-close {
-  fill: var(--main-color);
-}
-
-.icon-circle {
-  stroke: rgba(0, 0, 0, 0.1);
-  fill: var(--accent-color)
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 
 /* SECTION-CRITERIOS */
@@ -689,4 +691,36 @@ button-project {
 
 .ptoject:hover {
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-navigation {
+  position: relative;
+
+}
+
+/* .picture::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms linear;
+} */
+
+.picture:hover:after {
+  transform: translateY(0);
+}
+
+.text-navigation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms linear;
 }
