--- a/css/styles.css
+++ b/css/styles.css
@@ -695,6 +695,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 
 .card-navigation {
   position: relative;
+  /* overflow: hidden; */
 
 }
 
