--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,7 @@ button {
   position: relative;
 }
 
-.function-text {
+.function-title {
   position: absolute;
   bottom: 0;
   padding-top: 27px;
