--- a/css/styles.css
+++ b/css/styles.css
@@ -458,8 +458,9 @@ button {
   font-family: var(--main-font);
   font-style: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   text-align: center;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--accent-color);
   background-color: rgba(47, 48, 58, 0.8);
